# boatsell

./: pyproject.toml
boat/: admin.py  models.py  urls.py  views.py
boat/migrations/: 0001_initial.py  0002_boat_price.py
boat/templates/boat/: base.html  boat_detail.html  boat_list.html  contacts.html  product_confirm_delete.html  product_form.html
boat/templates/boat/includes/: inc_main_menu.html
boat/templatetags/: my_tags.py
config/: settings.py
order/: admin.py  models.py  services.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/template/order/: order_form.html
order/templates/order/: order_form.html
